# catalyst-rain-cache

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SOURCES.md  TRANSFORMERS.md  kv_cache_scaling.csv
evidence/hkvc-first-evidence-package/: README.md
evidence/hkvc-first-evidence-package/bench/: __init__.py  breakthrough_assessment.py  fixed_state_quality.py  lossless_equivalence.py  lossless_scale.py  manifold_attention_benchmark.py  metrics.py  next_evidence.py  official_longbench_ruler.py  private_context_benchmark.py  rain_transport_probe.py  ruler_needle_benchmark.py  run_benchmarks.py  sdk_delegate.py  tier2_evidence.py
evidence/hkvc-first-evidence-package/sdk/: __init__.py  sdk_proxy.py
evidence/hkvc-first-evidence-package/site/: breakthrough_assessment.json  fixed_state_quality_results.json  index.html  lossless_equivalence_results.json  lossless_scale_results.json  manifold_attention_results.json  next_evidence_results.json  official_longbench_ruler_results.json  private_context_results.json  rain_transport_probe_results.json  results.json  ruler_needle_results.json  tier2_evidence_results.json
examples/: research_dropin.py
scripts/: generate_scaling_chart.py
src/catalyst_kv_cache/: __init__.py  cli.py  core.py  license.py  sdk_bridge.py  serve.py
tests/: test_cli_onboarding.py  test_core.py  test_evidence_tier2.py  test_official_benchmarks.py  test_public_boundary.py  test_rain_transport_probe.py  test_ruler_needle_baselines.py  test_sdk_bridge.py  test_serve.py
(+1 files in other folders)
